--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -17,8 +17,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "public_html/bitrix/templates/tpl/dist",
-            "index": "src/index.html",
+            "deployUrl": "dist/",
+            "outputPath": {
+              "base": "../backend/public_html/dist",
+              "browser": ""
+            },
+            "index": {
+              "input": "src/index.html",
+              "output": "../index.html"
+            },
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
