add public_html to repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /backend/.phpunit.cache
 /backend/node_modules
-/backend/public_html
+#/backend/public_html
 /backend/public/build
 /backend/public/hot
 /backend/public/storage
