--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -18,14 +18,9 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "deployUrl": "dist/",
-            "outputPath": {
-              "base": "../backend/public_html/dist",
-              "browser": ""
-            },
-            "index": {
-              "input": "src/index.html",
-              "output": "../index.html"
-            },
+            "baseHref": "/",
+            "outputPath": "../backend/public/angular",
+            "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
