--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         ports:
             - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
-        working_dir: /var/www/html/backend
+            - '4200:4200'
         environment:
             WWWUSER: '${WWWUSER}'
             WWWGROUP: '${WWWGROUP}'
@@ -115,10 +115,13 @@ volumes:
 # After updating your application's docker-compose.yml file, you should rebuild your container images:
 # sail build --no-cache
 # sail up
+# sail build --no-cache && sail up -d
 ##########################################################
 
 ##########################################################
 # Useful commands
 # sail root-shell (to run commands under root)
 # sail down -v (stop containers and remove volumes)
+# ng serve --host 0.0.0.0
+# ng build
 ##########################################################
