--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,6 +116,7 @@ volumes:
 # sail build --no-cache
 # sail up
 # sail build --no-cache && sail up -d
+# sail restart
 ##########################################################
 
 ##########################################################
