--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,10 @@ yarn-error.log
 /.osp
 /.vite
 /.AdminLTE
+/.hostinger
 *.gz
 _ide_helper.php
 .phpstorm.meta.php
 package-lock.json
+artisan
+public_html
