--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/backend/.env
+/backend/.env.production
 /backend/.phpunit.cache
 /backend/node_modules
 /backend/public/angular
@@ -10,9 +12,6 @@
 /backend/resources/frontend
 /frontend/node_modules
 /frontend/.angular
-.env
-.env.backup
-.env.production
 .phpactor.json
 .phpunit.result.cache
 Homestead.json
@@ -32,5 +31,3 @@ yarn-error.log
 _ide_helper.php
 .phpstorm.meta.php
 package-lock.json
-artisan
-public_html
