--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,25 @@ volumes:
 ##########################################################
 
 ##########################################################
+# Steps locally
+# mkdir translator
+# cd translator
+# git clone git@github.com:roman-t-nor/translator.git .
+# copy .env (development) to /backend
+# docker compose up -d
+# docker ps (copy name of container)
+# docker exec -it translator_clean_slate-laravel.test-1 bash
+# composer install
+# exit
+# cd backend
+# sail npm i
+# sail npm run build
+# sail shell
+# cd ../frontend
+# npm i
+# ng build
+#
+#
 # Steps on hostinger.com
 # rm -rf tytov-roman.com
 # mkdir tytov-roman.com
