--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 65002
           script: |
+            export PATH=$PATH:/home/u199591996/nodejs/bin:/home/u199591996/.npm-global/bin
             cd ${{ env.DEPLOY_PATH }}/backend
             composer install --no-interaction --prefer-dist --optimize-autoloader
             npm install
